--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build": "PUBLIC_URL=http://ytterb.org/ react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "npm run build"
+    "heroku-postbuild": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
