--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "start": "PUBLIC_URL=http://localhost:8000/ react-scripts start",
-    "build": "PUBLIC_URL=http://localhost:8000/ react-scripts build",
+    "build": "PUBLIC_URL=https://ytterblog.herokuapp.com/ react-scripts build",
     "postbuild": "python manage.py collectstatic --noinput",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
